--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Ozgarish kiritilgan joyga yoki kodga komment yozib qoyila tushunb bomayapti <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+
 1) urls ni router ga otkazish
 2) categories fake data toldirish
 3) testlarni qarab chiqish (serializer larni togrilash)
 4) makefile ni togrilab qoyish
+
