--- a/TODO
+++ b/TODO
@@ -5,3 +5,68 @@
 3) testlarni qarab chiqish (serializer larni togrilash)
 4) makefile ni togrilab qoyish
 
+
+gunicorn, uwsgi
+daphne
+
+/etc/nginx/sites-enabled/botcommerce
+
+server {
+    listen [::]:80;
+    server_name fastcommerce.online www.fastcommerce.online;
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+
+    location /static/ {
+        root /var/www/botcommerce;
+    }
+
+    location /media/ {
+        root /var/www/botcommerce;
+    }
+
+    location / {
+        include proxy_params;
+        proxy_pass http://unix:/var/www/botcommerce/botcommerce.sock;
+    }
+}
+
+
+server {
+    listen 80;
+    server_name static.fastcommerce.online www.static.fastcommerce.online;
+
+    location /static/ {
+        root /var/www/botcommerce;
+    }
+}
+
+fastcommerce.online
+api.fastcommerce.online
+static.fastcommerce.online
+media.fastcommerce.online
+
+
+
+
+
+/etc/systemd/system/botcommerce.service
+
+
+[Unit]
+Description=gunicorn daemon
+After=network.target
+
+[Service]
+User=root
+Group=www-data
+WorkingDirectory=/var/www/botcommerce
+ExecStart=/root/.cache/pypoetry/virtualenvs/botcommerce-gFegOML8-py3.10/bin/gunicorn --bind unix:/var/www/botcommerce/botcommerce.sock root.wsgi:application
+
+[Install]
+WantedBy=multi-user.target
+
+
+
+systemctl start (service_fayl_nomi).service
+systemctl enable (service_fayl_nomi).service
